--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ name = "blast"
 path = "src/lib/lib.rs"
 
 [dependencies]
-rltk = { version = "0.8.0" }
-specs = "0.16.1"
+rltk = { version = "0.8.0", features = ["serde"] }
+specs = { version = "0.16.1", features = ["serde"] }
 specs-derive = "0.4.1"
 getrandom = { version = "0.2", features = ["js"] }
+serde = { version = "1.0.93", features = ["derive"] }
+serde_json = "1.0.39"
